# RustCompetenceDevelopment

1-intro/: 10-print.rs  2-variables.rs  3-statements_expressions.rs  4-functions.rs  5-ownership.rs  6-borrowing.rs  7-slices.rs  8-enum.rs  9-flow_control.rs
1-intro/convert_infix_postfix/: Cargo.toml
1-intro/convert_infix_postfix/src/: main.rs
1-intro/more_intro/: Cargo.toml
1-intro/more_intro/src/: main.rs
1-intro/web programming/: 1-basic.rs  2-responses.rs
2-tauri/notes/: package-lock.json  package.json  tailwind.config.js
2-tauri/notes/src/: App.jsx  Editor.jsx  main.jsx
2-tauri/notes/src-tauri/: Cargo.toml  tauri.conf.json
3-CLI_Rust_book/c1/hello/: Cargo.toml
3-CLI_Rust_book/c2/echor/: Cargo.toml
3-CLI_Rust_book/c4/headr/: Cargo.toml
3-CLI_Rust_book/c6/uniqr/: Cargo.toml
3-CLI_Rust_book/c7/findr/: Cargo.toml
4-RustInAction/cpu_emul/: Cargo.toml
4-RustInAction/cpu_emul/src/: main.rs
4-RustInAction/fs-hexview/: Cargo.toml
4-RustInAction/fs-hexview-str/src/: main.rs
4-RustInAction/fs-hexview/src/: main.rs
4-RustInAction/fs-keyvaluedb/: Cargo.toml  DB
4-RustInAction/fs-keyvaluedb/src/: kvDB.rs  lib.rs
4-RustInAction/memory_pointers/: Cargo.toml
4-RustInAction/memory_pointers/src/: main.rs
5-DS/bintree/src/: main.rs
5-DS/list/src/: double_linked_list.rs  lib.rs  linked_list.rs  (+1 more)
6-stdLib/c1-basics/: Cargo.toml
6-stdLib/c2-collections/: Cargo.toml
6-stdLib/c3-files/: Cargo.toml
6-stdLib/c4-serialization/: Cargo.toml  solar_system_compared_to_earth.csv
7-practical-rust-web-proj/c2/catdex/: Cargo.toml  db.sh
7-practical-rust-web-proj/c2/catdex/migrations/2024-02-11-041738_create_cats/: up.sql
7-practical-rust-web-proj/c2/catdex/src/: main.rs  models.rs
7-practical-rust-web-proj/c2/catdex/static/: add.html  cat.html  index.html
7-practical-rust-web-proj/c2/catdex/static/css/: index.css
7-practical-rust-web-proj/c3-Rest_BE_actix/catdex-api/: Cargo.toml  db.sh  tests_curl.sh
7-practical-rust-web-proj/c3-Rest_BE_actix/catdex-api/src/: main.rs  models.rs
7-practical-rust-web-proj/c3-Rest_BE_actix/catdex-api/static/: index.html
(+17 files in other folders)
