[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
handlebars = { version = "5.1.0", features = ["dir_source"] }
serde = "1.0.196"
serde_json = "1.0.113"
