[package]
name = "catdex-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3.0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version="1.4.4", features=["postgres", "r2d2"]}
r2d2 = "0.8.8"
